Make form width 90% to remove right hand side whitespace bug

--- a/themes/default/stylesheets/layout.scss
+++ b/themes/default/stylesheets/layout.scss
@@ -132,8 +132,8 @@ body {
 
 .appropriateness_message {
   background: #e8fbfe;
-  padding: 1em;
-  margin: 1em 0;
+  padding: 3%;
+  margin: 3%;
 }
 
 /* @end */
