--- a/themes/default/stylesheets/theme-forms.scss
+++ b/themes/default/stylesheets/theme-forms.scss
@@ -93,7 +93,7 @@ ul.jq-ui-autocomplete li.active {
 }
 
 form.standard_form {
-  width: 100%;
+  width: 90%;
 }
 
 .standard_form input[type="text"],
